test(sub): fix sub assert error

--- a/test/e2e/setup/subs.yaml
+++ b/test/e2e/setup/subs.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   channel: stable
   name: commons-operator
-  source: kubedata-catalog
+  source: kubedoop-catalog
   sourceNamespace: ($namespace)
   installPlanApproval: Automated
 ---
@@ -17,7 +17,7 @@ metadata:
 spec:
   channel: stable
   name: listener-operator
-  source: kubedata-catalog
+  source: kubedoop-catalog
   sourceNamespace: ($namespace)
   installPlanApproval: Automated
 ---
@@ -28,7 +28,7 @@ metadata:
 spec:
   channel: stable
   name: secret-operator
-  source: kubedata-catalog
+  source: kubedoop-catalog
   sourceNamespace: ($namespace)
   installPlanApproval: Automated
 ---
@@ -39,7 +39,7 @@ metadata:
 spec:
   channel: stable
   name: zookeeper-operator
-  source: kubedata-catalog
+  source: kubedoop-catalog
   sourceNamespace: ($namespace)
   installPlanApproval: Automated
 ---
@@ -50,6 +50,6 @@ metadata:
 spec:
   channel: stable
   name: hdfs-operator
-  source: kubedata-catalog
+  source: kubedoop-catalog
   sourceNamespace: ($namespace)
   installPlanApproval: Automated
