--- a/test/e2e/setup/zookeeper-assert.yaml
+++ b/test/e2e/setup/zookeeper-assert.yaml
@@ -1,7 +1,9 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: zk-default
+  name: zk-server-default
 status:
-  availableReplicas: 2
-  replicas: 2
+  availableReplicas: 3
+  readyReplicas: 3
+  currentReplicas: 3
+  replicas: 3
