--- a/test/e2e/setup/zookeeper.yaml
+++ b/test/e2e/setup/zookeeper.yaml
@@ -9,22 +9,12 @@ metadata:
     app.kubernetes.io/created-by: zookeeper-operator
   name: zk
 spec:
-  image:
-    repository: docker.io/bitnami/zookeeper
-    tag: 3.9.1-debian-12-r15
   clusterConfig:
-    listenerClass: cluster-internal
+    listenerClass: external-unstable
   server:
-    config:
-      resources:
-        cpu:
-          min: "100m"
-          max: "200m"
-        memory:
-          limit: "400Mi"
     roleGroups:
       default:
-        replicas: 2
+        replicas: 3
         config:
           logging:
             zookeeperCluster:
@@ -32,6 +22,6 @@ spec:
                 test:
                   level: DEBUG
               console:
-                level: WARN
+                level: INFO
               file:
                 level: INFO
