--- a/test/e2e/kerberos/chainsaw-test.yaml
+++ b/test/e2e/kerberos/chainsaw-test.yaml
@@ -101,6 +101,9 @@ spec:
         file: ../setup/zookeeper.yaml
     - assert:
         file: ../setup/zookeeper-assert.yaml
+    cleanup:
+    - sleep:
+        duration: 30s
   - try:  # deploy hdfs
     - apply:
         file: hdfs.yaml
@@ -138,7 +141,7 @@ spec:
           '
     cleanup:
     - sleep:
-        duration: 30s
+        duration: 10s
   - try:
     - apply:
         file: hbase.yaml
@@ -146,4 +149,4 @@ spec:
         file: hbase-assert.yaml
     cleanup:
     - sleep:
-        duration: 20s
+        duration: 10s
