refactor: update product image tag and bump operator-go to 0.9.0 (#68)
* refactor: update product image tag and bump operator-go to 0.9.0

* build(dockerfile): bump golang to 1.23

* fix: fix manifest generator error

* build(chansaw): bump chainsaw version to 0.2.8

* fix(e2e): fix chainsaw install err by download binary file

* refactor(api): change pdb is optional

* fix(e2e): fix e2e teardown ns err by increase zk cleanup delay

* test(e2e): bump secret and listener csi version

--- a/test/e2e/default/chainsaw-test.yaml
+++ b/test/e2e/default/chainsaw-test.yaml
@@ -18,11 +18,18 @@ spec:
         file: ../setup/listener.yaml
     - assert:
         file: ../setup/listener-assert.yaml
+    - apply:
+        file: ../setup/secret.yaml
+    - assert:
+        file: ../setup/secret-assert.yaml
   - try:
     - apply:
         file: ../setup/zookeeper.yaml
     - assert:
         file: ../setup/zookeeper-assert.yaml
+    cleanup:
+    - sleep:
+        duration: 30s
   - try:
     - apply:
         file: ../setup/hdfs.yaml
@@ -30,7 +37,7 @@ spec:
         file: ../setup/hdfs-assert.yaml
     cleanup:
     - sleep:
-        duration: 30s
+        duration: 5s
   - try:
     - apply:
         file: hbase.yaml
@@ -38,4 +45,4 @@ spec:
         file: hbase-assert.yaml
     cleanup:
     - sleep:
-        duration: 20s
+        duration: 5s
