feature(auth): add oidc support

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -31,6 +31,14 @@ rules:
   - update
   - watch
 - apiGroups:
+  - authentication.zncdata.dev
+  resources:
+  - authenticationclasses
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - hbase.zncdata.dev
   resources:
   - hbaseclusters
