--- a/.chainsaw.yaml
+++ b/.chainsaw.yaml
@@ -11,7 +11,7 @@ spec:
     delete: 120s
     error: 180s
     exec: 300s
-  # skipDelete: true
+  # skipDelete: false
   failFast: true
   forceTerminationGracePeriod: 10s
   parallel: 1
