--- a/test/e2e/kerberos/chainsaw-test.yaml
+++ b/test/e2e/kerberos/chainsaw-test.yaml
@@ -146,6 +146,7 @@ spec:
     - apply:
         file: hbase.yaml
     - assert:
+        timeout: 600s
         file: hbase-assert.yaml
     cleanup:
     - sleep:
@@ -163,7 +164,7 @@ spec:
       - describe:
           apiVersion: v1
           kind: Pod
-          selector: app.kubernetes.io/managed-by=hbase-operator
+          selector: app.kubernetes.io/instance=krb5-hbase
       - podLogs:
-          selector: app.kubernetes.io/managed-by=hbase-operator
+          selector: app.kubernetes.io/instance=krb5-hbase
           tail: -1
