refactor: refactor with operator-go and add oidc support (#82)
* build(deps): bump operator-go to 0.10.0

* feature(auth): add oidc support

* fix(e2e): add catch to catch kerberos err

* fix(e2e): update catch pod label and add timeout to assert

--- a/test/e2e/kerberos/chainsaw-test.yaml
+++ b/test/e2e/kerberos/chainsaw-test.yaml
@@ -146,7 +146,25 @@ spec:
     - apply:
         file: hbase.yaml
     - assert:
+        timeout: 600s
         file: hbase-assert.yaml
     cleanup:
     - sleep:
         duration: 10s
+    catch:
+      - sleep:
+          duration: 5s
+      - script:
+          env:
+            - name: NAMESPACE
+              value: ($namespace)
+          content: |
+            set -ex
+            kubectl -n $NAMESPACE get pods
+      - describe:
+          apiVersion: v1
+          kind: Pod
+          selector: app.kubernetes.io/instance=krb5-hbase
+      - podLogs:
+          selector: app.kubernetes.io/instance=krb5-hbase
+          tail: -1
