--- a/config/crd/bases/hbase.zncdata.dev_hbaseclusters.yaml
+++ b/config/crd/bases/hbase.zncdata.dev_hbaseclusters.yaml
@@ -43,13 +43,29 @@ spec:
                 properties:
                   authentication:
                     properties:
+                      authenticationClass:
+                        type: string
                       kerberosSecretClass:
                         type: string
+                      oidc:
+                        description: OidcSpec defines the OIDC spec.
+                        properties:
+                          clientCredentialsSecret:
+                            description: |-
+                              OIDC client credentials secret. It must contain the following keys:
+                                - `CLIENT_ID`: The client ID of the OIDC client.
+                                - `CLIENT_SECRET`: The client secret of the OIDC client.
+                              credentials will omit to pod environment variables.
+                            type: string
+                          extraScopes:
+                            items:
+                              type: string
+                            type: array
+                        required:
+                        - clientCredentialsSecret
+                        type: object
                       tlsSecretClass:
                         type: string
-                    required:
-                    - kerberosSecretClass
-                    - tlsSecretClass
                     type: object
                   hdfsConfigMapName:
                     type: string
@@ -77,11 +93,11 @@ spec:
                 properties:
                   custom:
                     type: string
-                  platformVersion:
+                  kubedoopVersion:
                     default: 0.0.0-dev
                     type: string
                   productVersion:
-                    default: 2.4.17
+                    default: 2.4.18
                     type: string
                   pullPolicy:
                     default: IfNotPresent
@@ -31415,7 +31431,6 @@ spec:
                 type: object
             required:
             - clusterConfig
-            - image
             type: object
           status:
             description: HbaseClusterStatus defines the observed state of HbaseCluster
