build(deps): bump operator-go to 0.11.2

--- a/test/e2e/oidc/authenticationclass.yaml
+++ b/test/e2e/oidc/authenticationclass.yaml
@@ -8,7 +8,7 @@ spec:
       hostname: (join('', ['keycloak.', ($namespace), '.svc.cluster.local']))
       port: 80
       rootPath: (join('', ['/realms/', ($KEYCLOAK_REALM)]))
-      provisioner: keycloak
+      providerHint: keycloak
       scopes:
       - openid
       - email
