refactor: bump domain to kubedoop.dev

--- a/config/crd/bases/hbase.kubedoop.dev_hbaseclusters.yaml
+++ b/config/crd/bases/hbase.kubedoop.dev_hbaseclusters.yaml
@@ -4,9 +4,9 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.16.2
-  name: hbaseclusters.hbase.zncdata.dev
+  name: hbaseclusters.hbase.kubedoop.dev
 spec:
-  group: hbase.zncdata.dev
+  group: hbase.kubedoop.dev
   names:
     kind: HbaseCluster
     listKind: HbaseClusterList
