--- a/config/crd/patches/cainjection_in_hbaseclusters.yaml
+++ b/config/crd/patches/cainjection_in_hbaseclusters.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: CERTIFICATE_NAMESPACE/CERTIFICATE_NAME
-  name: hbaseclusters.hbase.zncdata.dev
+  name: hbaseclusters.hbase.kubedoop.dev
