--- a/config/crd/patches/webhook_in_hbaseclusters.yaml
+++ b/config/crd/patches/webhook_in_hbaseclusters.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: hbaseclusters.hbase.zncdata.dev
+  name: hbaseclusters.hbase.kubedoop.dev
 spec:
   conversion:
     strategy: Webhook
