--- a/config/rbac/hbasecluster_editor_role.yaml
+++ b/config/rbac/hbasecluster_editor_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: hbasecluster-editor-role
 rules:
 - apiGroups:
-  - hbase.zncdata.dev
+  - hbase.kubedoop.dev
   resources:
   - hbaseclusters
   verbs:
@@ -24,7 +24,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - hbase.zncdata.dev
+  - hbase.kubedoop.dev
   resources:
   - hbaseclusters/status
   verbs:
