--- a/config/rbac/hbasecluster_viewer_role.yaml
+++ b/config/rbac/hbasecluster_viewer_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: hbasecluster-viewer-role
 rules:
 - apiGroups:
-  - hbase.zncdata.dev
+  - hbase.kubedoop.dev
   resources:
   - hbaseclusters
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - hbase.zncdata.dev
+  - hbase.kubedoop.dev
   resources:
   - hbaseclusters/status
   verbs:
