--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -31,7 +31,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - authentication.zncdata.dev
+  - authentication.kubedoop.dev
   resources:
   - authenticationclasses
   verbs:
@@ -39,7 +39,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - hbase.zncdata.dev
+  - hbase.kubedoop.dev
   resources:
   - hbaseclusters
   verbs:
@@ -51,13 +51,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - hbase.zncdata.dev
+  - hbase.kubedoop.dev
   resources:
   - hbaseclusters/finalizers
   verbs:
   - update
 - apiGroups:
-  - hbase.zncdata.dev
+  - hbase.kubedoop.dev
   resources:
   - hbaseclusters/status
   verbs:
