--- a/test/e2e/kerberos/hdfs.yaml
+++ b/test/e2e/kerberos/hdfs.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: zookeeper.zncdata.dev/v1alpha1
+apiVersion: zookeeper.kubedoop.dev/v1alpha1
 kind: ZookeeperZnode
 metadata:
   labels:
@@ -13,7 +13,7 @@ spec:
   clusterRef:
     name: zk
 ---
-apiVersion: hdfs.zncdata.dev/v1alpha1
+apiVersion: hdfs.kubedoop.dev/v1alpha1
 kind: HdfsCluster
 metadata:
   labels:
