refactor: bump operator-go to 0.12-dev (#105)
* refactor: bump domain to kubedoop.dev

* refactor: bump operator-go to 0.12-dev

--- a/test/e2e/kerberos/chainsaw-test.yaml
+++ b/test/e2e/kerberos/chainsaw-test.yaml
@@ -5,9 +5,9 @@ metadata:
 spec:
   bindings:
   - name: relam
-    value: ZNCDATA.DEV
+    value: KUBEDOOP.DEV   # kerberos relam, should be uppercase, see hdfs also
   - name: kadminPassword
-    value: zncdatadev
+    value: kubedoopdev
   - name: kadminKeytabSecret
     value: kadmin-keytab
   steps:
@@ -61,7 +61,7 @@ spec:
             (keytab != ""): true
     - apply:
         resource:
-          apiVersion: secrets.zncdata.dev/v1alpha1
+          apiVersion: secrets.kubedoop.dev/v1alpha1
           kind: SecretClass
           metadata:
             name: kerberos
@@ -98,7 +98,7 @@ spec:
         - name: NAMESPACE
           value: ($namespace)
         - name: KRB5_HOME
-          value: /zncdata/kerberos
+          value: /kubedoop/kerberos
         content: |  # Note: The script has a large number of escape cases. hdfs access is limited to hdfs cluster resources, resulting in delays
           # debug node info
           kubectl get node
