--- a/test/e2e/setup/zookeeper.yaml
+++ b/test/e2e/setup/zookeeper.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   clusterConfig:
     listenerClass: external-unstable
-  server:
+  servers:
     roleGroups:
       default:
         replicas: 1
