--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,12 +36,10 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '~1.23'
+          go-version-file: go.mod
 
       - name: Run linter
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.61
+        uses: golangci/golangci-lint-action@v7
 
   golang-test:
     name: Golang Test
@@ -53,7 +51,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '~1.23'
+          go-version-file: go.mod
 
       - name: Running Tests
         run: |
@@ -74,7 +72,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '~1.23'
+          go-version-file: go.mod
 
       - name: Create KinD clustet pur
         env:
