--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,25 +74,22 @@ jobs:
         with:
           go-version-file: go.mod
 
-      - name: Create KinD clustet pur
+      - name: Create KinD cluster
         env:
-          KINDTEST_K8S_VERSION: ${{ matrix.k8s-version}}
+          KIND_K8S_VERSION: ${{ matrix.k8s-version}}
           KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
-          KIND_KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
         run: make kind-create
 
       - name: Chainsaw test setup
         env:
-          KINDTEST_K8S_VERSION: ${{ matrix.k8s-version }}
+          KIND_K8S_VERSION: ${{ matrix.k8s-version}}
           KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
-          KIND_KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
         run: make chainsaw-setup
 
       - name: Test with Chainsaw
         env:
-          KINDTEST_K8S_VERSION: ${{ matrix.k8s-version }}
+          KIND_K8S_VERSION: ${{ matrix.k8s-version}}
           KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
-          KIND_KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
         run: make chainsaw-test
 
 
