--- a/config/crd/bases/hbase.kubedoop.dev_hbaseclusters.yaml
+++ b/config/crd/bases/hbase.kubedoop.dev_hbaseclusters.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.16.5
+    controller-gen.kubebuilder.io/version: v0.17.1
   name: hbaseclusters.hbase.kubedoop.dev
 spec:
   group: hbase.kubedoop.dev
@@ -90,14 +90,15 @@ spec:
                     type: boolean
                 type: object
               image:
+                default:
+                  pullPolicy: IfNotPresent
+                  repo: quay.io/zncdatadev
                 properties:
                   custom:
                     type: string
                   kubedoopVersion:
-                    default: 0.0.0-dev
                     type: string
                   productVersion:
-                    default: 2.4.18
                     type: string
                   pullPolicy:
                     default: IfNotPresent
@@ -107,7 +108,7 @@ spec:
                   pullSecretName:
                     default: hbase
                     type: string
-                  repository:
+                  repo:
                     default: quay.io/zncdatadev
                     type: string
                 type: object
