--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 
 env:
-  VERSION: ${{ github.ref_name }}
+  VERSION: ${{ github.ref_type == 'tag' && github.ref_name || '0.0.0-dev' }}
 
 
 jobs:
@@ -41,6 +41,7 @@ jobs:
       - name: Run linter
         uses: golangci/golangci-lint-action@v8
 
+
   golang-test:
     name: Golang Test
     runs-on: ubuntu-latest
@@ -64,7 +65,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        k8s-version: ['1.26.15', '1.27.16']
+        k8s-version: [
+          '1.26.15',
+          '1.27.16',
+          '1.28.15',
+          '1.29.12',
+          '1.30.8',
+          '1.31.4',
+          '1.32.0'
+        ]
+
     steps:
       - name: Clone the code
         uses: actions/checkout@v4
@@ -82,13 +92,13 @@ jobs:
 
       - name: Chainsaw test setup
         env:
-          KIND_K8S_VERSION: ${{ matrix.k8s-version}}
+          KIND_K8S_VERSION: ${{ matrix.k8s-version }}
           KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
         run: make chainsaw-setup
 
       - name: Test with Chainsaw
         env:
-          KIND_K8S_VERSION: ${{ matrix.k8s-version}}
+          KIND_K8S_VERSION: ${{ matrix.k8s-version }}
           KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
         run: make chainsaw-test
 
@@ -97,6 +107,8 @@ jobs:
     name: Release Image
     if: ${{ github.repository_owner == 'zncdatadev' }}
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # required for OIDC for cosign to automatically use
     needs:
       - markdown-lint
       - golang-lint
@@ -105,6 +117,9 @@ jobs:
     steps:
       - name: Clone the code
         uses: actions/checkout@v4
+
+      - name: Setup Cosign
+        uses: sigstore/cosign-installer@main
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -122,6 +137,59 @@ jobs:
           password: ${{ secrets.QUAY_PASSWORD }}
 
       - name: Build and push operator
-
         run: |
           make docker-buildx
+
+      - name: Sign operator image
+        uses: ./.github/actions/sign-image
+
+
+  chart-lint-test:
+    runs-on: ubuntu-latest
+    container:
+      image: public.ecr.aws/artifacthub/ah:v1.14.0
+      options: --user 1001
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Run ah lint
+        working-directory: ./charts
+        run: ah lint
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v4.3.0
+
+      - name: Setup Chart Linting
+        id: lint
+        uses: helm/chart-testing-action@v2.7.0
+
+      - name: Run chart-testing (list-changed)
+        id: list-changed
+        run: |
+          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
+          if [[ -n "$changed" ]]; then
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+          fi
+      - name: Run chart-testing (lint)
+        if: steps.list-changed.outputs.changed == 'true'
+        run: ct lint --debug --config ./.github/configs/ct-lint.yaml
+
+      - name: Create kind cluster
+        if: steps.list-changed.outputs.changed == 'true'
+        uses: helm/kind-action@v1.10.0
+
+      - name: Run chart-testing (install)
+        if: steps.list-changed.outputs.changed == 'true'
+        run: ct install --config ./.github/configs/ct-install.yaml
+
+
+  release-chart:
+    name: Release Chart
+    if: ${{ github.repository_owner == 'zncdatadev' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build and push oci chart
+        run: |
+          make chart-publish
