--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,17 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        k8s-version: ['1.26.15', '1.27.16']
+        k8s-version: [
+          '1.26.15',
+          # '1.27.16',
+          # '1.28.15',
+          # '1.29.12',
+          # '1.30.8',
+          # '1.31.4',
+          '1.32.0'
+        ]
+        product-version: ['3.3.6','3.4.0']
+      # max-parallel: 1
     steps:
       - name: Clone the code
         uses: actions/checkout@v4
@@ -50,12 +60,13 @@ jobs:
 
       - name: Chainsaw test setup
         env:
-          KIND_K8S_VERSION: ${{ matrix.k8s-version}}
+          KIND_K8S_VERSION: ${{ matrix.k8s-version }}
           KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
         run: make chainsaw-setup
 
       - name: Test with Chainsaw
         env:
-          KIND_K8S_VERSION: ${{ matrix.k8s-version}}
+          KIND_K8S_VERSION: ${{ matrix.k8s-version }}
           KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
+          PRODUCT_VERSION: ${{ matrix.product-version }}
         run: make chainsaw-test
