feat(ci): enhance CI workflows for chart linting and publishing with additional steps and improvements

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,29 @@ jobs:
         run: |
           make docker-buildx
 
+
+  publish-chart:
+    name: Publish Chart
+    if: ${{ github.repository_owner == 'zncdatadev' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone the code
+        uses: actions/checkout@v4
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v4
+
+      - name: Login to quay.io
+        uses: docker/login-action@v3
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_CHART_USERNAME }}
+          password: ${{ secrets.QUAY_CHART_PASSWORD }}
+
+      - name: Build and push oci chart
+        run: |
+          make chart-publish
+
       - name: Clone helm charts repository
         uses: actions/checkout@v4
         with:
