feat: add zookeeper-operator and hdfs-operator to the list of operators in chart lint test

--- a/.github/workflows/chart-lint-test.yml
+++ b/.github/workflows/chart-lint-test.yml
@@ -111,6 +111,8 @@ jobs:
             commons-operator
             listener-operator
             secret-operator
+            zookeeper-operator
+            hdfs-operator
           )
 
           # Install dependencies
