--- a/test/e2e/setup/hdfs-assert.yaml
+++ b/test/e2e/setup/hdfs-assert.yaml
@@ -13,7 +13,7 @@ metadata:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hdfs-default-journalnode
+  name: hdfs-journalnode-default
 status:
   availableReplicas: 1
   replicas: 1
@@ -21,7 +21,7 @@ status:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hdfs-default-namenode
+  name: hdfs-namenode-default
 status:
   availableReplicas: 2
   replicas: 2
@@ -29,7 +29,7 @@ status:
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hdfs-default-datanode
+  name: hdfs-datanode-default
 status:
   availableReplicas: 1
   replicas: 1
