--- a/test/e2e/pdb/chainsaw-test.yaml
+++ b/test/e2e/pdb/chainsaw-test.yaml
@@ -31,9 +31,11 @@ spec:
     - get:
         apiVersion: v1
         kind: Pod
+        namespace: '*'
     - describe:
         apiVersion: v1
         kind: Pod
+        namespace: '*'
     cleanup:
     - sleep:
         duration: 5s
