fix: update chainsaw test directory and add get step for StatefulSet in chainsaw-test.yaml

--- a/test/e2e/pdb/chainsaw-test.yaml
+++ b/test/e2e/pdb/chainsaw-test.yaml
@@ -30,6 +30,9 @@ spec:
     catch:
     - get:
         apiVersion: v1
+        kind: StatefulSet
+    - get:
+        apiVersion: v1
         kind: Pod
         namespace: '*'
     - describe:
