--- a/deploy/helm/hbase-operator/templates/clustererole.yaml
+++ b/deploy/helm/hbase-operator/templates/clustererole.yaml
@@ -66,4 +66,16 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - policy
+  resources:
+  - poddisruptionbudgets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
 {{- end }}
