ci: fix release workflow not check chart (#180)
* docs: remove pre-requisites section from README.md for clarity

* ci: add the correct product-version mitrixs

* ci: fix release workflow not check chart

* feat: add zookeeper-operator and hdfs-operator to the list of operators in chart lint test

* refactor: update deploy chart CRDs

* refactor: remove logging configuration from HDFS cluster setup

* fix: hdfs name err in e2e and chart dep version err in chart test

* fix: update kubectl exec command for namenode pod in chainsaw-test.yaml

* fix: add catch block for pod description and retrieval in chainsaw-test.yaml

* fix: swap describe and get order in chainsaw-test.yaml catch block

* fix: update chainsaw-test.yaml to include namespace in pod get and describe steps

* fix: update chainsaw test directory and add get step for StatefulSet in chainsaw-test.yaml

* fix: add poddisruptionbudgets resource to ClusterRole in clustererole.yaml

* fix: update e2e test directory for chainsaw in chart-lint-test.yml

---------

Co-authored-by: whg517 <huagang517@126.com>

--- a/.github/workflows/chart-lint-test.yml
+++ b/.github/workflows/chart-lint-test.yml
@@ -111,11 +111,13 @@ jobs:
             commons-operator
             listener-operator
             secret-operator
+            zookeeper-operator
+            hdfs-operator
           )
 
           # Install dependencies
           for dep in "${HELM_DEPENDENCIES[@]}"; do
-            helm upgrade --install --create-namespace --namespace kubedoop-operators --wait $dep kubedoop/$dep
+            helm upgrade --install --create-namespace --namespace kubedoop-operators --wait $dep kubedoop/$dep --version ${{ env.VERSION }}
           done
 
           # Install hbase-operator chart
