--- a/.github/workflows/chart-lint-test.yml
+++ b/.github/workflows/chart-lint-test.yml
@@ -88,7 +88,7 @@ jobs:
         if: steps.list-changed.outputs.changed == 'true'
         run: |
           make docker-build
-          kind load docker-image quay.io/zncdatadev/hbase-operator:${{ env.VERSION }}
+          kind load docker-image quay.io/zncdatadev/hbase-operator:$VERSION
 
 
       - name: Run chart-testing (install)
@@ -114,7 +114,7 @@ jobs:
 
           # Install dependencies
           for dep in "${HELM_DEPENDENCIES[@]}"; do
-            helm upgrade --install --create-namespace --namespace kubedoop-operators --wait  $dep oci://quay.io/kubedoopcharts/$dep --version $VERSION
+            helm upgrade --install --create-namespace --namespace kubedoop-operators --wait $dep oci://quay.io/kubedoopcharts/$dep --version $VERSION
           done
 
           # Install hbase-operator chart
