--- a/config/rbac/hbasecluster_admin_role.yaml
+++ b/config/rbac/hbasecluster_admin_role.yaml
@@ -1,9 +1,9 @@
 # This rule is not used by the project hbase-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants permissions to create, update, and delete resources within the hbase.kubedoop.dev.
-# This role is intended for users who need to manage these resources
-# but should not control RBAC or manage permissions for others.
+# Grants full permissions ('*') over hbase.kubedoop.dev.
+# This role is intended for users authorized to modify roles and bindings within the cluster,
+# enabling them to delegate specific permissions to other users or groups as needed.
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -11,23 +11,17 @@ metadata:
   labels:
     app.kubernetes.io/name: hbase-operator
     app.kubernetes.io/managed-by: kustomize
-  name: hbasecluster-editor-role
+  name: hbasecluster-admin-role
 rules:
 - apiGroups:
   - hbase.kubedoop.dev
   resources:
   - hbaseclusters
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
+  - '*'
 - apiGroups:
   - hbase.kubedoop.dev
   resources:
   - hbaseclusters/status
   verbs:
-  - get
+  - '*'
