--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
           '1.31.4',
           '1.32.0'
         ]
-
+        product-version: ['2.4.18','2.6.1']
     steps:
       - name: Clone the code
         uses: actions/checkout@v5
@@ -87,19 +87,20 @@ jobs:
       - name: Create KinD cluster
         env:
           KIND_K8S_VERSION: ${{ matrix.k8s-version}}
-          CHAINSAW_KUBECONFIG: .kubeconfig-${{ matrix.k8s-version }}
+          CHAINSAW_KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
         run: make setup-chainsaw-cluster
 
       - name: Setup Chainsaw
         env:
           KIND_K8S_VERSION: ${{ matrix.k8s-version }}
-          CHAINSAW_KUBECONFIG: .kubeconfig-${{ matrix.k8s-version }}
+          CHAINSAW_KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
         run: make setup-chainsaw-e2e
 
       - name: Run chainsaw-e2e
         env:
           KIND_K8S_VERSION: ${{ matrix.k8s-version }}
-          CHAINSAW_KUBECONFIG: .kubeconfig-${{ matrix.k8s-version }}
+          CHAINSAW_KUBECONFIG: kind-kubeconfig-${{ matrix.k8s-version }}
+          PRODUCT_VERSION: ${{ matrix.product-version }}
         run: make chainsaw-e2e
 
 
@@ -169,6 +170,8 @@ jobs:
 
   chart-linter-artifacthub:
     runs-on: ubuntu-latest
+    needs:
+      - check-crds-sync
     container:
       image: public.ecr.aws/artifacthub/ah:v1.14.0
       options: --user 1001
@@ -182,6 +185,8 @@ jobs:
 
   chart-lint-test:
     runs-on: ubuntu-latest
+    needs:
+      - check-crds-sync
     steps:
       - name: Checkout
         uses: actions/checkout@v5
@@ -191,7 +196,8 @@ jobs:
       - name: Set up Helm
         uses: azure/setup-helm@v4.3.0
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
           check-latest: true
@@ -302,6 +308,11 @@ jobs:
             echo "ct_tested=true" >> "$GITHUB_OUTPUT"
           fi
 
+      - name: Build helm chart
+        if: steps.ct-test.outputs.ct_tested == 'true'
+        run: |
+          make helm-chart-package
+
       - name: Run e2e with chart
         if: steps.ct-test.outputs.ct_tested == 'true'
         run: |
@@ -318,8 +329,8 @@ jobs:
             helm upgrade --install --create-namespace --namespace kubedoop-operators --wait $dep oci://quay.io/kubedoopcharts/$dep --version $VERSION
           done
 
-          # Install hbase-operator chart
-          helm install --create-namespace --namespace hbase-operators --wait hbase-operator ./deploy/helm/hbase-operator
+          # Install packaged operator chart
+          helm install --create-namespace --namespace hbase-operators --wait hbase-operator ./target/charts/hbase-operator-$VERSION.tgz
 
           # E2E tests
           make chainsaw
@@ -335,7 +346,7 @@ jobs:
       - chart-lint-test
     steps:
       - name: Clone the code
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
 
       - name: Login to quay.io
         uses: docker/login-action@v3
@@ -346,7 +357,7 @@ jobs:
 
       - name: Build and push oci chart
         run: |
-          make chart-publish
+          make helm-chart-publish
 
       - name: Clone helm charts repository
         uses: actions/checkout@v5
