refactor: uodo native metrics endpoint, use jvm metrics endpoint

--- a/test/e2e/.chainsaw.yaml
+++ b/test/e2e/.chainsaw.yaml
@@ -3,7 +3,7 @@ kind: Configuration
 metadata:
   name: custom-config
 spec:
-  # namespace: chainsaw
+  namespace: chainsaw
   timeouts:
     apply: 300s
     assert: 600s
@@ -11,7 +11,7 @@ spec:
     delete: 120s
     error: 180s
     exec: 300s
-  # skipDelete: true
+  skipDelete: true
   failFast: true
   forceTerminationGracePeriod: 10s
   parallel: 1
