--- a/test/e2e/observability/hbase-assert.yaml
+++ b/test/e2e/observability/hbase-assert.yaml
@@ -1,4 +1,5 @@
 # Master metrics service
+# Note: HBase 2.4.x uses /jmx endpoint (JSON format), not /prometheus
 apiVersion: v1
 kind: Service
 metadata:
@@ -8,7 +9,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "16010"
-    prometheus.io/path: "/prom"
+    prometheus.io/path: "/jmx"
     prometheus.io/scheme: "http"
 spec:
   clusterIP: None
@@ -31,7 +32,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "16030"
-    prometheus.io/path: "/prom"
+    prometheus.io/path: "/jmx"
     prometheus.io/scheme: "http"
 spec:
   clusterIP: None
@@ -54,7 +55,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "8085"
-    prometheus.io/path: "/prom"
+    prometheus.io/path: "/jmx"
     prometheus.io/scheme: "http"
 spec:
   clusterIP: None
